--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
-  },
-  "devDependencies": {
+    "tailwindcss": "3.3.2",
     "next-pwa": "^5.6.0"
   }
+  
 }
