--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,23 +9,53 @@
     "description": "A portfolio website",
     "icons": [
         {
-            "src": "/icon-192x192.png",
+            "src": "/ipad_splash.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose" : "any maskable"
         },
         {
-            "src": "/icon-256x256.png",
+            "src": "/ipadpro1_splash.png",
             "sizes": "256x256",
             "type": "image/png"
         },
         {
-            "src": "/icon-384x384.png",
+            "src": "/ipadpro2_splash.png",
             "sizes": "384x384",
             "type": "image/png"
         },
         {
-            "src": "/icon-512x512.png",
+            "src": "/ipadpro3_splash.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        },
+        {
+            "src": "/iphone5_splash.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        },
+        {
+            "src": "/iphone6_splash.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        },
+        {
+            "src": "/iphoneplus_splash.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        },
+        {
+            "src": "/iphonex_splash.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        },
+        {
+            "src": "/iphonexr_splash.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        },
+        {
+            "src": "/iphonexsmax_splash.png",
             "sizes": "512x512",
             "type": "image/png"
         }
