--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "13.4.8",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
