--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "@octokit/rest": "^20.0.2",
     "@previewjs/cli": "^1.24.1",
+    "dotenv": "^16.3.1",
     "font-awesome": "^4.7.0",
     "next": "13.4.8",
     "next-pwa": "^5.6.0",
